--- a/MotifFinding.ipynb
+++ b/MotifFinding.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "MotifFinding.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMn1Yz8GYD5SQ06rxczVDt0",
+      "authorship_tag": "ABX9TyOGaHYGgF9oXGtlTouHn271",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -41,7 +41,7 @@
         "    occurrences = []\n",
         "    for i in range(len(s)-len(m)+1): # loop over alignment\n",
         "        match = True\n",
-        "        for j in range(len(t)): # loop over characters\n",
+        "        for j in range(len(m)): # loop over characters\n",
         "            if s[i+j] != m[j]:  # compare characters\n",
         "                match = False   # mismatch\n",
         "                break\n",
